fix button spacing

--- a/css/main.css
+++ b/css/main.css
@@ -452,7 +452,6 @@ template {
     #Header li.nav_icon {
       background-color: #F2BE00; }
   #Header a {
-    padding: 0 0.3rem;
     border-bottom: none; }
 
 #Hero {
