--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -54,7 +54,7 @@ li {
 
   }
   a {
-    padding: 0 0.3rem;
+    
     border-bottom: none;
   }
 }
